--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"prettier": "^3.3.3",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-hot-toast": "^2.4.1",
 		"react-router": "^6.26.1",
 		"react-router-dom": "^6.26.1",
 		"sass": "^1.77.8",
@@ -30,6 +31,7 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.9.0",
+		"@svgr/webpack": "^8.1.0",
 		"@types/node": "^22.5.0",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
