--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 		"react-router-dom": "^6.26.1",
 		"sass": "^1.77.8",
 		"sqlite3": "^5.1.7",
-		"vite-plugin-svgr": "^4.2.0"
+		"vite-plugin-svgr": "^4.2.0",
+		"ws": "^8.18.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.9.0",
