--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"react-hot-toast": "^2.4.1",
 		"react-router": "^6.26.1",
 		"react-router-dom": "^6.26.1",
+		"react-use-websocket": "^4.8.1",
 		"sass": "^1.77.8",
 		"sqlite3": "^5.1.7",
 		"vite-plugin-svgr": "^4.2.0",
